# evas

./: .env.example  .gitignore  CLAUDE.md  EVAS_3.md  EVAS_AI_MONITOR.md  EVAS_KICKOFF.md  EVAS_SOURCES.md  EVAS_UI.md  Evas2.md  Makefile  alembic.ini  docker-compose.yml  evas_schema.sql  pyproject.toml
.claude/: settings.json
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_ai_clip_findings.py  0003_sources.py  0004_checklist_prompt.py
docs/: ops.md
examples/: videos.csv
frontend/: .env.example  README.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  api.test.ts  api.ts  components.tsx  data.ts  i18n.ts  theme.css  types.ts  vite-env.d.ts
frontend/src/screens/: AiReview.tsx  ChecklistEditor.tsx  Checklists.tsx  Clients.tsx  Dashboard.tsx  Portal.tsx  Queue.tsx  Review.tsx  Sources.tsx
frontend/src/test/: setup.ts
prompts/: clip_review-1.0.0.txt  frame_review-1.0.0.txt  frame_review-1.1.0.txt
scripts/: backup.sh  restore.sh
src/evas/: __init__.py  ab.py  ai.py  audit.py  auth.py  billing.py  checklists.py  cli.py  clips.py  config.py  db.py  enums.py  export.py  jobs.py  media.py  models.py  storage.py  triage.py  webhooks.py  worker.py
src/evas/api/: ab_routes.py  admin_routes.py  ai_routes.py  app.py  auth_routes.py  billing_routes.py  checklists_routes.py  clients_routes.py  (+7 more)
tests/: conftest.py  test_ab.py  test_admin.py  test_ai_monitor.py  test_api.py  test_auth.py  test_billing.py  test_checklist_config.py  test_clients.py  test_clips.py  test_grading.py  test_human_review.py  test_pipeline.py  test_portal.py  test_retention.py  test_sources.py  test_triage.py  test_webhooks.py
(+6 files in other folders)
